# cvmtool

./: Cargo.toml  README.md  deny.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
src/: main.rs  pck.rs  sev.rs  tdx.rs
tests/: cli.rs
tests/fixtures/: generate-tdx-fake-certs.sh  tdx.report
tests/fixtures/tdx-certs/: pck.pem  pck_chain.pem
tests/fixtures/tdx-fake-certs/: pck.pem  pck_chain.pem  pck_issuer_chain.pem
